Fixed track id remapping in MSE FrameProcessor

Previously FrameProcessor couldn't handle cases where audio and video
track ids were swapped between the previous and current init segment,
because we tried to do an in-place update, which is impossible to do
correctly when track ids have been swapped. Consider the case where
in the first init segment A=1,V=2 and in the second segment A=2,V=1.
In such case we can't simply move let's say track A from 1 to 2,
because track id 2 is occupied by V, and vice versa.
This CL implements a more advanced logic, that will record how track
ids have changed between segments and will then update all track buffer
mappings in FrameProcessor::UpdateTrackIds at once.

BUG=660247

Review-Url: https://codereview.chromium.org/2460763002
Cr-Commit-Position: refs/heads/master@{#428473}

Former-commit-id: b9233a906062fd461503fca84fa2223ee315bfaf